# pingora-grpc-web

./: Cargo.toml  README.md
client/grpc/: request.sh
client/grpc-web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/grpc-web/src/: index.ts
proxy/: Cargo.toml
proxy/src/: main.rs
proxy/src/config/: grpc_web_preflight.rs  mod.rs
server/: Cargo.toml  build.rs
server/src/: main.rs  proto.rs
