[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc_server"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.10.2", features = ["tls"]}
tonic-types = "0.10.2"
tonic-build = { "workspace" = true }
prost = "0.12.1"
prost-types = "0.12.1"
prost-build = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"

[build-dependencies]
prost-build = { "workspace" = true }
tonic-build = { "workspace" = true }
tonic-types = "0.10.2"
